--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -159,16 +159,20 @@
                                     <outlet property="nameLabel" destination="ebP-an-ueG" id="rKX-Uc-wQQ"/>
                                 </connections>
                             </view>
-                            <searchBar hidden="YES" contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="BXY-VJ-OXx">
-                                <rect key="frame" x="0.0" y="235" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="52" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ap0-u1-kSG">
                                 <rect key="frame" x="0.0" y="235" width="600" height="316"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="property name" showsCancelButton="YES" id="TEz-TC-NIy">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="crI-FA-vre" id="4op-eN-Ip5"/>
+                                    </connections>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PropertyCellId" rowHeight="52" id="goL-au-AVU" customClass="PropertyTVCell" customModule="iOS_Aura" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="52"/>
+                                        <rect key="frame" x="0.0" y="72" width="600" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="goL-au-AVU" id="jIP-rc-vIc">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="51"/>
@@ -213,13 +217,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ubm-gd-mCl" firstAttribute="centerX" secondItem="iOe-jp-J4O" secondAttribute="centerX" id="0vb-la-7Og"/>
-                            <constraint firstItem="BXY-VJ-OXx" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="bottom" constant="8" id="1Lv-hF-qT5"/>
                             <constraint firstItem="12P-gg-0nP" firstAttribute="top" secondItem="Ap0-u1-kSG" secondAttribute="bottom" id="4Ap-ld-QKm"/>
                             <constraint firstItem="Ap0-u1-kSG" firstAttribute="centerX" secondItem="iOe-jp-J4O" secondAttribute="centerX" id="KY8-sH-4gT"/>
                             <constraint firstItem="Ap0-u1-kSG" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="bottom" constant="8" id="QWY-On-Xn5"/>
                             <constraint firstItem="ubm-gd-mCl" firstAttribute="width" secondItem="iOe-jp-J4O" secondAttribute="width" id="XYh-r8-vlt"/>
-                            <constraint firstItem="BXY-VJ-OXx" firstAttribute="width" secondItem="iOe-jp-J4O" secondAttribute="width" id="bAo-hI-fsO"/>
-                            <constraint firstItem="BXY-VJ-OXx" firstAttribute="centerX" secondItem="iOe-jp-J4O" secondAttribute="centerX" id="dnx-Ia-2KD"/>
                             <constraint firstItem="Ap0-u1-kSG" firstAttribute="width" secondItem="iOe-jp-J4O" secondAttribute="width" id="fOe-md-nDd"/>
                             <constraint firstItem="ubm-gd-mCl" firstAttribute="top" secondItem="Ou6-Nx-vXq" secondAttribute="bottom" id="s9b-E7-Rz7"/>
                         </constraints>
