--- a/iOS_Aura/Base.lproj/Login.storyboard
+++ b/iOS_Aura/Base.lproj/Login.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2v2-67-fCY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2v2-67-fCY">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -58,11 +59,24 @@
                                     </segue>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-VM-qQf" customClass="AuraButton" customModule="iOS_Aura" customModuleProvider="target">
+                                <rect key="frame" x="234" y="469" width="133" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="bah-p6-kSi"/>
+                                    <constraint firstAttribute="width" constant="133" id="jYY-1o-lpv"/>
+                                </constraints>
+                                <state key="normal" title="OAuth"/>
+                                <connections>
+                                    <segue destination="lJ6-5K-62U" kind="presentation" identifier="OAuthLoginSegue" id="pNs-za-eua"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jhu-7q-oXF" firstAttribute="centerX" secondItem="gj5-gi-OxS" secondAttribute="centerX" id="1vo-nF-NXS"/>
-                            <constraint firstItem="A13-B2-IIq" firstAttribute="top" secondItem="hbz-ap-m1d" secondAttribute="bottom" constant="139" id="G0U-WZ-VcP"/>
+                            <constraint firstItem="A13-B2-IIq" firstAttribute="top" secondItem="8Xb-VM-qQf" secondAttribute="bottom" constant="77" id="3MF-er-0ks"/>
+                            <constraint firstItem="8Xb-VM-qQf" firstAttribute="centerX" secondItem="gj5-gi-OxS" secondAttribute="centerX" id="7Uo-kj-rfN"/>
+                            <constraint firstItem="8Xb-VM-qQf" firstAttribute="top" secondItem="hbz-ap-m1d" secondAttribute="bottom" constant="8" id="AKB-Qx-GSt"/>
                             <constraint firstItem="Ee7-Ms-yed" firstAttribute="height" secondItem="8Hr-PK-flC" secondAttribute="height" id="JXp-J3-fab"/>
                             <constraint firstItem="Ee7-Ms-yed" firstAttribute="centerX" secondItem="gj5-gi-OxS" secondAttribute="centerX" id="OtJ-7z-QpX"/>
                             <constraint firstItem="Ee7-Ms-yed" firstAttribute="width" secondItem="8Hr-PK-flC" secondAttribute="width" id="TTd-cv-BU2"/>
@@ -82,6 +96,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LUc-9z-l8F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="526" y="260"/>
+        </scene>
+        <!--Auth Login View Controller-->
+        <scene sceneID="aqB-Nl-s8G">
+            <objects>
+                <viewController id="lJ6-5K-62U" customClass="OAuthLoginViewController" customModule="iOS_Aura" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qSr-Nt-SZd"/>
+                        <viewControllerLayoutGuide type="bottom" id="86j-n3-stX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JNp-Gb-Dy0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2US-YP-ZSQ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2US-YP-ZSQ" firstAttribute="leading" secondItem="JNp-Gb-Dy0" secondAttribute="leading" id="ADI-9B-NFT"/>
+                            <constraint firstAttribute="topMargin" secondItem="2US-YP-ZSQ" secondAttribute="top" id="aHg-Yd-aw5"/>
+                            <constraint firstAttribute="trailing" secondItem="2US-YP-ZSQ" secondAttribute="trailing" id="dNi-ft-ZXd"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="2US-YP-ZSQ" secondAttribute="bottom" id="ylg-V0-u4s"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="2US-YP-ZSQ" id="hYz-z4-3Of"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m3e-Aq-pqd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="526" y="1034"/>
         </scene>
         <!--Main-->
         <scene sceneID="oen-6v-MWB">
