--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -116,6 +116,118 @@
             </objects>
             <point key="canvasLocation" x="861" y="-376"/>
         </scene>
+        <!--Property View Controller-->
+        <scene sceneID="3QD-rl-W4S">
+            <objects>
+                <viewController storyboardIdentifier="toPropertyView" id="aPG-sC-KdD" customClass="PropertyViewController" customModule="iOS_Aura" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PKN-05-aLS"/>
+                        <viewControllerLayoutGuide type="bottom" id="1ck-vM-3Bh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="h65-2X-wNY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0T-mi-BYe">
+                                <rect key="frame" x="20" y="87" width="212" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="212" id="7BM-ma-Gv4"/>
+                                    <constraint firstAttribute="height" constant="26" id="BAm-AC-Oxa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kih-KD-WeX">
+                                <rect key="frame" x="20" y="159" width="89" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="T5t-hV-GVb"/>
+                                    <constraint firstAttribute="width" constant="89" id="kQL-rY-DRt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jem-Q4-XMn">
+                                <rect key="frame" x="20" y="130" width="89" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="89" id="D1R-R6-mfl"/>
+                                    <constraint firstAttribute="height" constant="21" id="adP-5l-d2O"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Null)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lga-2s-tip">
+                                <rect key="frame" x="314" y="130" width="266" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="266" id="NF7-cZ-9rj"/>
+                                    <constraint firstAttribute="height" constant="21" id="aXv-Zi-Rxn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Null)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5k-TL-v1A">
+                                <rect key="frame" x="314" y="159" width="266" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KwR-vf-kbt"/>
+                                    <constraint firstAttribute="width" constant="266" id="agI-fM-PAa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Basetype" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UzR-wv-gDA">
+                                <rect key="frame" x="20" y="188" width="89" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="89" id="1nc-da-PTP"/>
+                                    <constraint firstAttribute="height" constant="21" id="9q6-fe-inh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Null)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYl-8e-dOK">
+                                <rect key="frame" x="314" y="188" width="266" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="IZ6-3K-RRW"/>
+                                    <constraint firstAttribute="width" constant="266" id="yee-EI-Fvu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="eYl-8e-dOK" secondAttribute="trailing" id="17l-MU-NCf"/>
+                            <constraint firstItem="lga-2s-tip" firstAttribute="top" secondItem="PKN-05-aLS" secondAttribute="bottom" constant="66" id="2ea-6o-LZx"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="D0T-mi-BYe" secondAttribute="leading" id="9dO-OW-sHw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="R5k-TL-v1A" secondAttribute="trailing" id="VON-vv-6NI"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Jem-Q4-XMn" secondAttribute="leading" id="Z7g-XD-BUU"/>
+                            <constraint firstItem="D0T-mi-BYe" firstAttribute="top" secondItem="PKN-05-aLS" secondAttribute="bottom" constant="23" id="Zb8-h1-3f8"/>
+                            <constraint firstItem="Jem-Q4-XMn" firstAttribute="top" secondItem="D0T-mi-BYe" secondAttribute="bottom" constant="17" id="dEC-s5-92t"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lga-2s-tip" secondAttribute="trailing" id="gPh-WP-ggU"/>
+                            <constraint firstItem="Kih-KD-WeX" firstAttribute="top" secondItem="Jem-Q4-XMn" secondAttribute="bottom" constant="8" id="o2l-EN-DMH"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="UzR-wv-gDA" secondAttribute="leading" id="oS2-lm-iv3"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Kih-KD-WeX" secondAttribute="leading" id="pLr-NQ-bVa"/>
+                            <constraint firstItem="eYl-8e-dOK" firstAttribute="top" secondItem="R5k-TL-v1A" secondAttribute="bottom" constant="8" id="pZ5-sr-33a"/>
+                            <constraint firstItem="UzR-wv-gDA" firstAttribute="top" secondItem="Kih-KD-WeX" secondAttribute="bottom" constant="8" id="prs-q5-ZWg"/>
+                            <constraint firstItem="R5k-TL-v1A" firstAttribute="top" secondItem="lga-2s-tip" secondAttribute="bottom" constant="8" id="u7v-Cq-Pmw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="baseTypeLabel" destination="eYl-8e-dOK" id="xrw-le-NU1"/>
+                        <outlet property="displayNameLabel" destination="D0T-mi-BYe" id="G0M-3Y-MY4"/>
+                        <outlet property="nameLabel" destination="R5k-TL-v1A" id="SjY-FV-RAd"/>
+                        <outlet property="valueLabel" destination="lga-2s-tip" id="Dxa-CK-7rY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ilf-sy-skZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2569" y="-376"/>
+        </scene>
         <!--Device View Controller-->
         <scene sceneID="1Vj-Kv-fec">
             <objects>
@@ -229,6 +341,7 @@
                     <connections>
                         <outlet property="panelView" destination="ubm-gd-mCl" id="iVX-PF-nJ8"/>
                         <outlet property="tableView" destination="Ap0-u1-kSG" id="ptA-gD-Aqn"/>
+                        <segue destination="aPG-sC-KdD" kind="show" identifier="toPropertyView" id="RqI-EY-fwQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6cj-Vr-Kay" userLabel="First Responder" sceneMemberID="firstResponder"/>
